force-app/main/default/objects/AccountingSettings__mdt/AccountingSettings__mdt.object-meta.xml
<CustomObject>
    <label>Accounting Setting</label>
    <pluralLabel>Accounting Settings</pluralLabel>
</CustomObject>