force-app/main/default/objects/AccountingSettings__mdt/fields/AmountNetto__c.field-meta.xml
<CustomField>
    <fullName>AmountNetto__c</fullName>
    <label>Amount Netto</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>