force-app/main/default/objects/AccountingSettings__mdt/fields/AmountVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountVAT__c</fullName>
    <label>Amount VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>