force-app/main/default/objects/AccountingSettings__mdt/fields/PaymentPeriod__c.field-meta.xml
<CustomField>
    <fullName>PaymentPeriod__c</fullName>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>