force-app/main/default/objects/AccountingSettings__mdt/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1% Regeleung</fullName>
                <default>true</default>
                <label>1% Regeleung</label>
            </value>
            <value>
                <fullName>Spenden</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Subscription fee</fullName>
            </value>
            <value>
                <fullName>Child care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>